bk_ida/gccida/c2/fixup_stack_1
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_stack_1/src/function.c:3126:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v4.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_stack_1/src/function.c:3136:67: error: use of undeclared identifier 'machine_mode'
if ( **( _WORD **)( v4.rtwint + 16) == 54 && !memory_address_p( ( machine_mode)BYTE2( v3), x->fld[0].rtx) ) 
                                                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/fixup_stack_1/src/obj/function.o] Error 1
